...
    <item
        android:id="@+id/searchFragment"
        android:title="Search"
        android:icon="@drawable/ic_search"/>

    <item
        android:id="@+id/sourcesFragment"
        android:title="@string/tab_sources"
        android:icon="@drawable/ic_source"/>

    <item
        android:id="@+id/settingsFragment"
        android:title="@string/tab_settings"
...
