...
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnBackground"
                    android:maxLines="5"
                    android:ellipsize="end" />

                <TextView
                    android:id="@+id/content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnBackground" />
            </LinearLayout>
...
